# LeaseGuard

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html
experiments/: run_experiments.py  scenarios.py  workload.py
leaseguard/: __init__.py  authority.py  baselines.py  counter.py  enforcement.py  lease.py  operation.py  partition.py  reconciliation.py
results/: results.csv  scenarios.md
tests/: test_core.py
